--- a/p8105_hw5_qh2284.Rmd
+++ b/p8105_hw5_qh2284.Rmd
@@ -9,9 +9,10 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(dplyr)
+library(ggplot2)
 ```
 
-### Problem 1
+## Problem 1
 
 **Describe the raw data. Create a `city_state` variable (e.g. "Baltimore, MD") and then summarize within cities to obtain the total number of homicides and the number of unsolved homicides (those for which the disposition is "Closed without arrest" or "Open/No arrest").**
 
@@ -124,14 +125,70 @@ result_df %>%
 
 From the plot, we could observe the estimated proportion of unsolved with 95% CI for each city, where Chicago, IL has the most and Tulsa, AL has the least.
 
-### Problem 2
+## Problem 2
 
-**Create a tidy dataframe containing data from all participants, including the subject ID, arm, and observations over time:**
+**Create a tidy dataframe containing data from all participants, including the subject ID, arm, and observations over time.**
 
--   Start with a dataframe containing all file names; the `list.files` function will help
+**Start with a dataframe containing all file names; the `list.files` function will help. Iterate over file names and read in data for each subject using `purrr::map` and saving the result as a new variable in the dataframe**
 
--   Iterate over file names and read in data for each subject using `purrr::map` and saving the result as a new variable in the dataframe
+```{r}
+all_data = 
+  tibble(
+    files = list.files("data/problem2/"),
+    path = str_c("data/problem2/", files)
+  ) %>% 
+  mutate(data = map(path, read_csv)) %>% 
+  unnest()
+```
 
--   Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are \"tidy\", and do any other tidying that\'s necessary
+**Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are \"tidy\", and do any other tidying that\'s necessary**
 
-Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+```{r}
+# tidy the data
+tidy_data = 
+  all_data %>% mutate(
+    files = str_replace(files, ".csv", ""),
+    group = str_sub(files, 1, 3),
+    ID = str_sub(files, 5, 7)) %>% 
+  pivot_longer(week_1:week_8,names_to = "week", values_to = "observation",names_prefix = "week_") %>% 
+  mutate(week = as.numeric(week)) %>% 
+  dplyr::select(group, ID, week, observation)
+
+tidy_data
+```
+
+**Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.**
+
+```{r}
+# make a spaghetti plot
+spa_plot = tidy_data %>%
+  ggplot(aes(x = week, y = observation, color = ID)) +
+  geom_line() +
+  geom_point() + 
+  facet_grid(~group) +
+  labs(x = 'Week', y = 'Observation', title = 'Spaghetti plot of observations on each subject over time')
+
+spa_plot
+```
+
+Comment: In control group, the observations among weeks for each subject are almost unchanged (fluctuating around a constant). However, in experiment group, the observations for each subject have the trends to increase among weeks.
+
+## Problem 3
+
+**When designing an experiment or analysis, a common question is whether it is likely that a true effect will be detected -- put differently, whether a false null hypothesis will be rejected. The probability that a false null hypothesis is rejected is referred to as power, and it depends on several factors, including: the sample size; the effect size; and the error variance. In this problem, you will conduct a simulation to explore power in a one-sample t-test.**
+
+**First set the following design elements:**
+
+-   **Fix n=30**
+
+-   **Fix** $\sigma = 5$
+
+**Set** $\mu = 0$**. Generate 5000 datasets from the model:** x∼Normal[μ,σ]
+
+**For each dataset, save** $\hat{\mu}$ **and the p-value arising from a test of** H0: $\mu = 0$ **using** $\alpha = 0.05$**. *Hint: to obtain the estimate and p-value, use `broom::tidy` to clean the output of `t.test`.***
+
+**Repeat the above for** $\mu = \{1,2,3,4,5,6\}$**, and complete the following:**
+
+**Make a plot showing the proportion of times the null was rejected (the power of the test) on the y axis and the true value of** μ **on the x axis. Describe the association between effect size and power.**
+
+**Make a plot showing the average estimate of** $\hat{\mu}$ **on the y axis and the true value of** μ **on the x axis. Make a second plot (or overlay on the first) the average estimate of** $\hat{\mu}$ **only in samples for which the null was rejected on the y axis and the true value of** μ **on the x axis. Is the sample average of** $\hat{\mu}$ **across tests for which the null is rejected approximately equal to the true value of** $\mu$ **? Why or why not?**
