--- a/p8105_hw5_qh2284.Rmd
+++ b/p8105_hw5_qh2284.Rmd
@@ -185,10 +185,111 @@ Comment: In control group, the observations among weeks for each subject are alm
 
 **Set** $\mu = 0$**. Generate 5000 datasets from the model:** x∼Normal[μ,σ]
 
+```{r}
+# run the test
+sample = map(1:5000, ~ rnorm(n = 30, mean = 0, sd = 5))
+```
+
 **For each dataset, save** $\hat{\mu}$ **and the p-value arising from a test of** H0: $\mu = 0$ **using** $\alpha = 0.05$**. *Hint: to obtain the estimate and p-value, use `broom::tidy` to clean the output of `t.test`.***
+
+```{r}
+# define a function to calculate t_test result
+t_test = function(sample) {
+  result = t.test(sample, alternative = "two.sided", conf.level = 0.95, mu = 0) %>% 
+    broom::tidy() %>% 
+    dplyr::select(estimate, p_value = p.value)
+  return(result)
+}
+
+res_list <- map2(sample, 1:5000, ~ t_test(.x) %>%
+                   mutate(iteration = .y))
+
+mean_0 = bind_rows(res_list) %>%
+  mutate(mean = 0, .before = 1) %>%
+  dplyr::select(mean, iteration, everything())
+
+mean_0
+
+```
 
 **Repeat the above for** $\mu = \{1,2,3,4,5,6\}$**, and complete the following:**
 
+```{r}
+# create a new function
+t_test_new = function(mu) {
+  sample = tibble(rnorm(n = 30, mean = mu, sd = 5))
+  result = t.test(sample, alternative = "two.sided", conf.level = 0.95, mu = mu) %>% 
+    broom::tidy() %>% 
+    dplyr::select(estimate, p_value = p.value)
+  return(result)
+}
+
+mean_1to6 <- expand_grid(mean = 1:6, iteration = 1:5000) %>% 
+  mutate(result = map(mean,t_test_new)) %>% 
+  unnest(result)
+```
+
+```{r}
+# combine the data
+mean_0to6 = bind_rows(mean_0, mean_1to6)
+```
+
 **Make a plot showing the proportion of times the null was rejected (the power of the test) on the y axis and the true value of** μ **on the x axis. Describe the association between effect size and power.**
 
-**Make a plot showing the average estimate of** $\hat{\mu}$ **on the y axis and the true value of** μ **on the x axis. Make a second plot (or overlay on the first) the average estimate of** $\hat{\mu}$ **only in samples for which the null was rejected on the y axis and the true value of** μ **on the x axis. Is the sample average of** $\hat{\mu}$ **across tests for which the null is rejected approximately equal to the true value of** $\mu$ **? Why or why not?**
+```{r}
+power_plot = mean_0to6 %>%
+  group_by(mean) %>% 
+  summarize(prop_rejected = sum(p_value < 0.05)/5000) %>% 
+  ggplot(aes(x = mean,y = prop_rejected)) +
+  geom_point() +
+  geom_line() +
+  scale_x_continuous(breaks = seq(0,6)) +
+  labs(x = "True mean",y = "Power",title = "Power vs. true mean") +
+  theme_minimal()
+
+power_plot
+```
+
+Comment:
+
+**Make a plot showing the average estimate of** $\hat{\mu}$ **on the y axis and the true value of** μ **on the x axis.**
+
+```{r}
+esti = mean_0to6 %>%
+  group_by(mean) %>% 
+  summarize(ave_estimate = mean(estimate,na.rm = T), .group = 'drop')
+
+compare_plot = esti %>%
+  ggplot(aes(x = mean,y = ave_estimate)) +
+  geom_point() +
+  geom_line() +
+  scale_x_continuous(breaks = seq(0,6)) + 
+  scale_y_continuous(breaks = seq(0,6)) + 
+  labs(x = "True mean",y = "Average estimate mean",title = "Average estimate mean vs. true mean") +
+  theme_minimal()
+
+compare_plot
+```
+
+**Make a second plot (or overlay on the first) the average estimate of** $\hat{\mu}$ **only in samples for which the null was rejected on the y axis and the true value of** μ **on the x axis. Is the sample average of** $\hat{\mu}$ **across tests for which the null is rejected approximately equal to the true value of** $\mu$ **? Why or why not?**
+
+```{r}
+only_rej = mean_0to6 %>% 
+  filter(p_value < 0.05) %>% 
+  group_by(mean) %>% 
+  summarize(ave_estimate = mean(estimate,na.rm = T), .groups = 'drop')
+
+  
+ggplot() +
+  geom_line(data = esti, aes(x = mean, y = ave_estimate, color = "esti")) +
+  geom_point(data = esti, aes(x = mean, y = ave_estimate, color = "esti")) +
+  geom_line(data = only_rej, aes(x = mean, y = ave_estimate, color = "only_rej")) +
+  geom_point(data = only_rej, aes(x = mean, y = ave_estimate, color = "only_rej")) +
+  scale_x_continuous(breaks = seq(0,6)) +
+  scale_y_continuous(breaks = seq(0,6)) +
+  labs(x = "True mean",y = "Average estimate mean",title = "Total compared to rejected-only") +
+  theme_minimal() +
+  scale_color_manual(values = c("esti" = "blue", "only_rej" = "red"))
+```
+
+Comment:
