--- a/p8105_hw5_qh2284.md
+++ b/p8105_hw5_qh2284.md
@@ -344,8 +344,8 @@ all_data =
     ## ℹ Please use `cols = c(data)`.
 
 **Tidy the result; manipulate file names to include control arm and
-subject ID, make sure weekly observations are "tidy", and do any other
-tidying that's necessary**
+subject ID, make sure weekly observations are “tidy”, and do any other
+tidying that’s necessary**
 
 ``` r
 # tidy the data
@@ -449,16 +449,16 @@ mean_0
     ## # A tibble: 5,000 × 4
     ##     mean iteration estimate p_value
     ##    <dbl>     <int>    <dbl>   <dbl>
-    ##  1     0         1  -0.0292  0.977 
-    ##  2     0         2  -1.23    0.121 
-    ##  3     0         3   0.237   0.776 
-    ##  4     0         4  -1.50    0.0545
-    ##  5     0         5  -0.926   0.266 
-    ##  6     0         6   2.08    0.0467
-    ##  7     0         7  -0.119   0.885 
-    ##  8     0         8   0.788   0.354 
-    ##  9     0         9  -0.190   0.833 
-    ## 10     0        10  -0.434   0.565 
+    ##  1     0         1   1.32    0.195 
+    ##  2     0         2   1.86    0.0874
+    ##  3     0         3   1.26    0.196 
+    ##  4     0         4  -0.469   0.622 
+    ##  5     0         5  -2.06    0.0226
+    ##  6     0         6   0.605   0.483 
+    ##  7     0         7  -1.21    0.248 
+    ##  8     0         8   1.75    0.0490
+    ##  9     0         9  -1.39    0.106 
+    ## 10     0        10  -0.0423  0.962 
     ## # ℹ 4,990 more rows
 
 **Repeat the above for** $\mu = \{1,2,3,4,5,6\}$**, and complete the
@@ -468,7 +468,7 @@ following:**
 # create a new function
 t_test_new = function(mu) {
   sample = tibble(rnorm(n = 30, mean = mu, sd = 5))
-  result = t.test(sample, alternative = "two.sided", conf.level = 0.95, mu = mu) %>% 
+  result = t.test(sample, alternative = "two.sided", conf.level = 0.95) %>% 
     broom::tidy() %>% 
     dplyr::select(estimate, p_value = p.value)
   return(result)
@@ -504,7 +504,10 @@ power_plot
 
 ![](p8105_hw5_qh2284_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
 
-Comment:
+Comment: From above we could observe that as true mean increases, the
+power also increases. In other words, the power increases as the effect
+size increases, and ultimately approaches 1. And we could observe that
+the slope of the curve is decreasing along the true mean.
 
 **Make a plot showing the average estimate of** $\hat{\mu}$ **on the y
 axis and the true value of** μ **on the x axis.**
@@ -527,6 +530,10 @@ compare_plot
 ```
 
 ![](p8105_hw5_qh2284_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+
+Comment: From above, we could observe that the average estimate mean is
+quite close to true mean. The relationship between average estimate mean
+and true mean is approximately y = x.
 
 **Make a second plot (or overlay on the first) the average estimate of**
 $\hat{\mu}$ **only in samples for which the null was rejected on the y
@@ -555,4 +562,8 @@ ggplot() +
 
 ![](p8105_hw5_qh2284_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
-Comment:
+Comment: We could observe that when the true mean is between 1 and 4,
+the average estimate means of whose null are rejected are different from
+true mean (always larger). This might be because of the small power at
+small effect size. When true mean is greater than 4, the average
+estimate means of whose null are rejected are similar to the true mean.
