--- a/p8105_hw5_qh2284.md
+++ b/p8105_hw5_qh2284.md
@@ -356,6 +356,7 @@ tidy_data =
     ID = str_sub(files, 5, 7)) %>% 
   pivot_longer(week_1:week_8,names_to = "week", values_to = "observation",names_prefix = "week_") %>% 
   mutate(week = as.numeric(week)) %>% 
+  mutate(observation = as.numeric(observation)) %>%
   dplyr::select(group, ID, week, observation)
 
 tidy_data
@@ -382,9 +383,9 @@ and comment on differences between groups.**
 ``` r
 # make a spaghetti plot
 spa_plot = tidy_data %>%
-  ggplot(aes(x = week, y = observation, color = ID)) +
-  geom_line() +
-  geom_point() + 
+  ggplot(aes(x = week, y = observation, group = ID, color = group)) +
+  geom_path() +
+  geom_point() +
   facet_grid(~group) +
   labs(x = 'Week', y = 'Observation', title = 'Spaghetti plot of observations on each subject over time')
 
@@ -449,16 +450,16 @@ mean_0
     ## # A tibble: 5,000 × 4
     ##     mean iteration estimate p_value
     ##    <dbl>     <int>    <dbl>   <dbl>
-    ##  1     0         1   1.32    0.195 
-    ##  2     0         2   1.86    0.0874
-    ##  3     0         3   1.26    0.196 
-    ##  4     0         4  -0.469   0.622 
-    ##  5     0         5  -2.06    0.0226
-    ##  6     0         6   0.605   0.483 
-    ##  7     0         7  -1.21    0.248 
-    ##  8     0         8   1.75    0.0490
-    ##  9     0         9  -1.39    0.106 
-    ## 10     0        10  -0.0423  0.962 
+    ##  1     0         1    0.505   0.653
+    ##  2     0         2    0.980   0.279
+    ##  3     0         3    0.265   0.778
+    ##  4     0         4   -1.00    0.345
+    ##  5     0         5    0.384   0.719
+    ##  6     0         6   -0.753   0.463
+    ##  7     0         7   -0.144   0.882
+    ##  8     0         8    0.882   0.432
+    ##  9     0         9   -0.767   0.390
+    ## 10     0        10   -0.137   0.871
     ## # ℹ 4,990 more rows
 
 **Repeat the above for** $\mu = \{1,2,3,4,5,6\}$**, and complete the
